syntax="proto3";

package calculator;
option go_package="calculator/calculatorpb";

message Calculator{
  int32 number1=1;
  int32 number2=2;
}

message CalculatorRequest{
  Calculator calculator=1;
}

message SumResponse{
  int32 result=1;
}

message NumberRequest{
  int32 number=1;
}

message PrimeNumberResponse{
  int32 result=1;
}

service CalculatorService{
  rpc Sum(CalculatorRequest) returns(SumResponse){};
  rpc PrimeNumberDecomposition(NumberRequest) returns(stream PrimeNumberResponse){};
}